--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,16 +17,14 @@ repos:
   - id: trailing-whitespace
 - repo: https://github.com/astral-sh/ruff-pre-commit
   # Ruff version.
-  rev: v0.14.3
+  rev: v0.14.10
   hooks:
     # Run the linter.
     - id: ruff
       args: [ --fix ]
     # Run the formatter.
     - id: ruff-format
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.18.2
+- repo: https://github.com/RobertCraigie/pyright-python
+  rev: v1.1.407
   hooks:
-  - id: mypy
-    name: Run MyPy typing checks.
-    args: ["--ignore-missing-imports", "--install-types", "--non-interactive"]
+  - id: pyright
