--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,3 +36,8 @@ build-backend = "hatchling.build"
 
 [tool.ruff]
 lint.ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+exclude = ["**/migrations/**"]
